// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DappletTags > should render DappletTags default 1`] = `
<DocumentFragment>
  <div
    class="_root_dea2c3 "
  />
</DocumentFragment>
`;

exports[`DappletTags > should render DappletTags then windowInnerWidth <= 880 & dappletState is false 1`] = `
<DocumentFragment>
  <div
    class="_root_dea2c3 "
  />
</DocumentFragment>
`;

exports[`DappletTags > should render DappletTags then windowInnerWidth <= 880 & dappletState is true 1`] = `
<DocumentFragment>
  <div
    class="_root_dea2c3 "
  >
    <button
      class="_button_dea2c3"
      data-testid="add-tag-button"
      type="button"
    >
      +
    </button>
  </div>
</DocumentFragment>
`;
